--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -1,11 +1,10 @@
 .nav {
   display: flex;
-  background-color: #fff;
+  background-color: #20232a;
   position: fixed;
   left: 0;
   right: 0;
   top: 0;
-  border-bottom: 1px solid #e5e5e5;
   z-index: 1;
 }
 
@@ -36,11 +35,13 @@
   font-size: 18px;
   line-height: 19px;
   font-weight: 700;
+  color: #fff;
 }
 
 .nav .brand img {
   width: 32px;
   margin-right: 10px;
+  margin-left: 10px;
 }
 
 @media only screen and (max-width: 600px) {
