--- a/src/styles/Video.module.css
+++ b/src/styles/Video.module.css
@@ -1,16 +1,20 @@
 .video {
   max-width: 400px;
-  height: fit-content;
-  background-color: #fff;
-  border: 1px solid #e5e5e5;
+  height: 310px;
+  background-color: #efefef;
+  /* border: 1px solid #e5e5e5; */
   padding: 10px;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
   padding-bottom: 1rem;
+  box-shadow: 0 0 15px 0 #8888884f;
+  border: 1px solid #61dafb;
 }
 
 .video:hover {
-  box-shadow: 0 0 15px 0 #e5e5e5;
+  /* box-shadow: 0 0 25px 0 #e5e5e5; */
+  box-shadow: 0 0 25px 0 #888888;
+  border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .video p {
@@ -26,6 +30,7 @@
 .video img {
   width: 100%;
   object-fit: cover;
+  /* box-shadow: 0 0 25px 0 #8888884f; */
 }
 
 .video .qmeta {
@@ -37,6 +42,11 @@
 .video .qmeta p {
   font-size: 15px;
   font-weight: 400;
+}
+
+.pscore {
+  color: green;
+  font-weight: 700;
 }
 
 @media only screen and (max-width: 600px) {
