--- a/src/styles/Summary.module.css
+++ b/src/styles/Summary.module.css
@@ -23,8 +23,15 @@
 .score {
   width: 400px;
   text-align: center;
-  font-size: 20px;
+  font-size: 35px;
   font-weight: 600;
+  padding: 5%;
+}
+.score1 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 600;
+  color: red;
 }
 
 .badge {
@@ -40,6 +47,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border: 2px solid #000;
+  border-radius: 5px;
 }
 
 @media only screen and (max-width: 800px) {
